Fix JdkObsolete Error Prone errors by using Charset overloads
The newer Error Prone pulled in with rules_java 9.8.0 reports
JdkObsolete for the String-charset-name JDK APIs. Switch to the
Charset overloads (URLEncoder/URLDecoder, new String, new Scanner,
new InputStreamReader, ByteArrayOutputStream.toString,
String.getBytes). Where the charset was a StandardCharsets constant,
.name() is dropped; where it was dynamic, Charset.forName(...) is
used. Now-dead UnsupportedEncodingException try/catch blocks and
imports are removed.

Charset.forName throws an unchecked exception for an invalid name,
whereas the String overloads threw checked UnsupportedEncodingException.
To avoid a misleading contract, drop the now-inaccurate
"throws UnsupportedEncodingException" from markdownToDocHtml and
ProjectOAuthFilter.extractAuthInfo (no caller catches it; the only
markdownToDocHtml caller passes a constant charset).

Release-Notes: skip
Change-Id: If2c31710fe462e0603eef46c6cdcecf3428db74e